--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
