--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-image-magnify": "^2.7.4",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
