--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-image-magnify": "^2.7.4",
+    "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
